[package]
name = "roon-extension-zone-presets"
version = "0.0.1"
authors = ["The Appgineer <theappgineer@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/theappgineer/roon-extension-zone-presets"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rust-roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.0.1", features = ["settings", "status", "transport"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
